# nixos-update-status

./: Cargo.toml  README.md  shell.nix
src/: err.rs  main.rs
