[package]
name = "nixos-update-status"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
argh = "0.1"
curl = "~0.4.0"
dirs = "~2.0.0"
rmp-serde = "~0.13.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
snafu = "~0.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"