[package]
name = "nixos-update-status"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1"
dirs-next = "2.0"
nanoserde = "0.1"

[dependencies.attohttpc]
version = "0.16"
default-features = false
features = [ "tls-rustls" ]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
